--- a/src/app/index.css
+++ b/src/app/index.css
@@ -351,3 +351,16 @@ table.super-fancy tr.foobar {
 	  background-clip: padding-box;
 	}
 }
+
+/** Responsive buttons on small screen */
+@media screen and (max-width: 400px) {
+	.btn2 {
+		padding:0 10px;
+		/*max-width:50%;*/
+	}
+	
+	.btn3 {
+		padding:0 10px;
+		/* max-width:33%;*/
+	}
+}
