--- a/src/app/components/directives/headerMenu/headerMenu.html
+++ b/src/app/components/directives/headerMenu/headerMenu.html
@@ -222,9 +222,9 @@
 
         <div class="row center">
             <div class="col s12">
-                <a href="#/" class="modal-action modal-close waves-effect waves-red btn red" style="max-width:50%"
+                <a href="#/" class="modal-action modal-close waves-effect waves-red btn btn-s red"
                    translate="commons.buttons.cancel"></a>
-                <button type="submit" class="btn waves-effect waves-red  green darken-1" style="max-width:50%"
+                <button type="submit" class="btn btn-s waves-effect waves-red  green darken-1"
                         translate="commons.buttons.validate"/>
             </div>
         </div>
@@ -303,9 +303,9 @@
 
         <div class="row center">
             <div class="col s12">
-                <a href="" ng-click="cancelSignup()" class="modal-action modal-close waves-effect waves-red btn red" style="max-width:50%"
+                <a href="" ng-click="cancelSignup()" class="modal-action modal-close waves-effect waves-red btn btn-s red" style="max-width:50%"
                    translate="commons.buttons.cancel"></a>
-                <button type="submit" class="btn waves-effect waves-red  green darken-1" style="max-width:50%"
+                <button type="submit" class="btn btn-s waves-effect waves-red  green darken-1" style="max-width:50%"
                         translate="commons.buttons.validate"/>
             </div>
         </div>
