--- a/src/app/modules/commons/users/signup/signup.html
+++ b/src/app/modules/commons/users/signup/signup.html
@@ -133,8 +133,8 @@
                     <div class="row">
                         <div class="col m3 hide-on-med-and-down">&nbsp;</div>
                         <div class="col m6 s12 center">
-                            <a ng-click="openCancelModal()" class="btn btn2 red lighteen-1 white-text">{{'commons.buttons.cancel' | translate }}</a>&nbsp;
-                            <button class="btn btn2 white-text green darken-1" type="submit" ng-click="validateUserCivilSection()" name="next">{{'commons.buttons.next' | translate }}</button>
+                            <a ng-click="openCancelModal()" class="btn btn-s red lighteen-1 white-text">{{'commons.buttons.cancel' | translate }}</a>&nbsp;
+                            <button class="btn btn-s white-text green darken-1" type="submit" ng-click="validateUserCivilSection()" name="next">{{'commons.buttons.next' | translate }}</button>
                         </div>
                         <div class="col m3 hide-on-med-and-down">&nbsp;</div>
                     </div>
@@ -177,9 +177,9 @@
                     <div class="row">
                         <div class="col m3 hide-on-med-and-down">&nbsp;</div>
                         <div class="col m6 s12 center">
-                            <a ng-click="openCancelModal()" class="btn btn3 red lighteen-1 white-text">{{'commons.buttons.cancel' | translate }}</a>&nbsp;
-                            <button class="btn btn3 white-text blue-grey darken-3" wz-previous type="submit" name="previous">{{'commons.buttons.previous' | translate }}</button>&nbsp;
-                            <button class="btn btn3 white-text green darken-1" type="submit" ng-click="validateSportSection()" name="next">{{'commons.buttons.next' | translate }}</button>
+                            <a ng-click="openCancelModal()" class="btn btn-s red lighteen-1 white-text">{{'commons.buttons.cancel' | translate }}</a>&nbsp;
+                            <button class="btn btn-s white-text blue-grey darken-3" wz-previous type="submit" name="previous">{{'commons.buttons.previous' | translate }}</button>&nbsp;
+                            <button class="btn btn-s white-text green darken-1" type="submit" ng-click="validateSportSection()" name="next">{{'commons.buttons.next' | translate }}</button>
                         </div>
                         <div class="col m3 hide-on-med-and-down">&nbsp;</div>
                     </div>
@@ -278,9 +278,9 @@
                     <div class="row">
                         <div class="col m3 hide-on-med-and-down">&nbsp;</div>
                         <div class="col m6 s12 center">
-                            <a ng-click="openCancelModal()" class="btn btn3 red lighteen-1 white-text">{{'commons.buttons.cancel' | translate }}</a>&nbsp;
-                            <button class="btn btn3 white-text blue-grey darken-3" wz-previous type="submit" name="previous">{{'commons.buttons.previous' | translate }}</button>&nbsp;
-                            <button class="btn btn3 white-text green darken-1" type="submit" ng-click="validateStructureSection()" name="next">{{'commons.buttons.next' | translate }}</button>
+                            <a ng-click="openCancelModal()" class="btn btn-s red lighteen-1 white-text">{{'commons.buttons.cancel' | translate }}</a>&nbsp;
+                            <button class="btn btn-s white-text blue-grey darken-3" wz-previous type="submit" name="previous">{{'commons.buttons.previous' | translate }}</button>&nbsp;
+                            <button class="btn btn-s white-text green darken-1" type="submit" ng-click="validateStructureSection()" name="next">{{'commons.buttons.next' | translate }}</button>
                         </div>
                         <div class="col m3 hide-on-med-and-down">&nbsp;</div>
                     </div>
@@ -370,9 +370,9 @@
                     <div class="row">
                         <div class="col m3 hide-on-med-and-down">&nbsp;</div>
                         <div class="col m6 s12 center-align">
-                            <a ng-click="openCancelModal()" class="btn btn3 red lighteen-1 white-text">{{'commons.buttons.cancel' | translate }}</a>&nbsp;
-                            <button class="btn btn3 white-text blue-grey darken-3" wz-previous type="submit" name="previous">{{'commons.buttons.previous' | translate }}</button>&nbsp;
-                            <a wz-next class="btn btn3 white-text green darken-1">{{'commons.buttons.validate' | translate }}</a>
+                            <a ng-click="openCancelModal()" class="btn btn-s red lighteen-1 white-text">{{'commons.buttons.cancel' | translate }}</a>&nbsp;
+                            <button class="btn btn-s white-text blue-grey darken-3" wz-previous type="submit" name="previous">{{'commons.buttons.previous' | translate }}</button>&nbsp;
+                            <a wz-next class="btn btn-s white-text green darken-1">{{'commons.buttons.validate' | translate }}</a>
                         </div>
                         <div class="col m3 hide-on-med-and-down">&nbsp;</div>
                     </div>
@@ -398,8 +398,8 @@
 	</div>
 	<div class="center">
 		<div class="col s12">
-			<a href="" ng-click="cancelSignup()" class="modal-action modal-close waves-effect waves-red btn green darken-1" style="max-width:50%" translate="modalSignupCancel.button.yes"></a>
-			<a href="" ng-click="closeCancelModal()" class="modal-action modal-close waves-effect waves-red btn red" style="max-width:50%" translate="modalSignupCancel.button.no"></a>
+			<a href="" ng-click="cancelSignup()" class="modal-action modal-close waves-effect waves-red btn btn-s green darken-1" translate="modalSignupCancel.button.yes"></a>
+			<a href="" ng-click="closeCancelModal()" class="modal-action modal-close waves-effect waves-red btn btn-s red" translate="modalSignupCancel.button.no"></a>
 		</div>
 	</div>
 </div>
