--- a/src/app/modules/sandbox/agenda/writeEvent.html
+++ b/src/app/modules/sandbox/agenda/writeEvent.html
@@ -1,23 +1,27 @@
 <div class="container">
 <!-- body start-->
-    <div class="row"><div class="col s12"></div></div>   
-
-    <!-- action bar -->
+    <div class="row"></div>
+    
+    <!-- Entete -->
     <div class="row">
-        <div ng-hide="addEventTitle">
-            <div class="col s1">    
-                <i class="material-icons red-text text-lighten-1 center medium">mode_edit</i>
-            </div>
-            <div class="col s11">
-                <h5 class="light-green-text text-lighten-1">{{'updateEvent.title' | translate }}</h5>
-            </div>
-        </div>
-        <div ng-show="addEventTitle">
-            <div class="col s1 red-text text-lighten-1">    
-                <i class="fa fa-plus-square-o fa-3x"></i>
-            </div>
-            <div class="col s11">
-                <h5 class="light-green-text text-lighten-1">{{'addEvent.title' | translate }}</h5>
+        <div class="col s12">
+            <div class="row blue-grey darken-2 white-text center-align">
+                <div ng-hide="addEventTitle">
+                    <div class="col s1">    
+                        <h5><i class="fa fa-pencil-square-o  fa-2x"></i></h5>
+                    </div>
+                    <div class="col s11">
+                        <h5>{{'updateEvent.title' | translate }}</h5>
+                    </div>
+                </div>
+                <div ng-show="addEventTitle">
+                    <div class="col s1 red-text text-lighten-1">    
+                        <i class="fa fa-plus-square-o fa-2x"></i>
+                    </div>
+                    <div class="col s11">
+                        <h5>{{'addEvent.title' | translate }}</h5>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -28,34 +32,49 @@
             <div class="card-panel"> 
                 <div class="row">
                     <div class="col m6 s12">
-                        <h6 class="red-text text-lighten-1 col s12">{{'eventLabels.SectionPlaning' | translate }}</h6>
+                        <h6 class="red-text text-lighten-1">{{'eventLabels.SectionPlaning' | translate }}</h6>
                         <div class="input-field col s4">
                             <label>{{'eventLabels.StartDate' | translate }} <span class="red-text text-lighten-1">*</span></label>
                         </div>
                         <div class="input-field col s8">
-
-                            <input id="EventStartDate" name="EventStartDate" type="text" class="datepicker" ng-model="startDate" required/>
+                            <input id="EventStartDate" name="EventStartDate" type="text" class="datepicker" ng-model="startDate" required
+                                   ng-class="{ 'has-error' : eventForm.EventStartDate.$invalid && !eventForm.EventStartDate.$pristine }"/>
                         </div>
+                        <div class="small red-text text-lighten-1 col s12"
+                            ng-show="eventForm.EventStartDate.$invalid && !eventForm.EventStartDate.$pristine" translate="eventErrors.StartDate"></div>
 
                         <div class="input-field col s4">
                             <label>{{'eventLabels.StartHour' | translate }} <span class="red-text text-lighten-1">*</span></label>
                         </div>
                         <div class="input-field col s8">
-                             <input id="EventStartHours" class="timepicker" name="hours" type="text" ng-model="startHours"/>
+                             <input id="EventStartHours" class="timepicker" name="EventStartHours" type="text" ng-model="startHours" required
+                                    ng-class="{ 'has-error' : eventForm.EventStartHours.$invalid && !eventForm.EventStartHours.$pristine }"/>
                         </div>
+                        <div class="small red-text text-lighten-1 col s12"
+                            ng-show="eventForm.EventStartHours.$invalid && !eventForm.EventStartHours.$pristine" translate="eventErrors.StartHour"></div>
                     </div>
                     <!-- EventType -->
                     <div class="col m6 s12">
-                        <h6 class="red-text text-lighten-1 col s12">{{'eventLabels.SectionIdentity' | translate }}</h6>
-                        <div class="input-field col s12">
-                            <input id="eventLabel" type="text" ng-model="event.label">
-                            <label for="eventLabel">{{'eventLabels.Label' | translate }}</label>
+                        <h6 class="red-text text-lighten-1">{{'eventLabels.SectionIdentity' | translate }}</h6>
+                        <div class="input-field col s3">
+                            <label>{{'eventLabels.Label' | translate }} <span class="red-text text-lighten-1">*</span></label>
                         </div>
-                        <div class="input-field col s12">
-                            <select class="browser-default blue-grey-text text-darken-1" ng-model="event.link.type" required id="EventType" ng-change="changeEventType()">
-                                <option value="" disabled selected>{{'eventLabels.Type' | translate }}</option>
+                        <div class="input-field col s9">
+                            <input name="eventLabel" type="text" ng-model="event.label" required ng-class="{ 'has-error' : eventForm.eventLabel.$invalid && !eventForm.eventLabel.$pristine }">
+                                <span class="small red-text text-lighten-1"
+                                    ng-show="eventForm.eventLabel.$invalid && !eventForm.eventLabel.$pristine" translate="eventErrors.Label"></span>
+                        </div>
+                        <div class="input-field col s3">
+                            <label>{{'eventLabels.Type' | translate }} <span class="red-text text-lighten-1">*</span></label>
+                        </div>
+                        <div class="input-field col s9">
+                            <select class="browser-default blue-grey-text text-darken-1" name="eventType" ng-model="event.link.type" 
+                                    required id="EventType" ng-change="changeEventType()" ng-class="{ 'has-error' : eventForm.eventType.$invalid && !eventForm.eventType.$pristine }">
+                                <option value="" selected>{{'eventLabels.selectType' | translate }}</option>
                                 <option ng-repeat="p in listEventType" value="{{p.code}}">{{p.label}}</option>
                             </select>
+                            <span class="small red-text text-lighten-1"
+                                ng-show="eventForm.eventType.$invalid && !eventForm.eventType.$pristine" translate="eventErrors.Type"></span>
                         </div>
                     </div>
                 </div>
@@ -64,27 +83,28 @@
             <div class="card-panel grey lighten-3" ng-show="chooseAdversary">                        
                 <div class="row">
                     <div class="input-field col s10 m5">
-                        <h6 class="red-text text-lighten-1">{{'eventLabels.SectionActorsHome' | translate }}</h6>
-                        <select class="browser-default blue-grey-text text-darken-1" ng-model="teamId" id="team" ng-change="changeTeamHome()">
+                        <h6 class="red-text text-lighten-1">{{'eventLabels.SectionActorsHome' | translate }} <span class="red-text text-lighten-1">*</span></label></h6>
+                        <select class="browser-default blue-grey-text text-darken-1" ng-model="teamId" name="SectionActorsHome" ng-change="changeTeamHome()" ng-required="chooseAdversary"
+                                ng-class="{ 'has-error' : eventForm.SectionActorsHome.$invalid && !eventForm.SectionActorsHome.$pristine }">
                             <option value="" disabled selected>{{'eventLabels.Team' | translate }}</option>
                             <option ng-repeat="p in listTeamHome" value="{{p._id}}">{{p.label}}</option>
                         </select>
+                        <span class="small red-text text-lighten-1 col s12"
+                            ng-show="eventForm.SectionActorsHome.$invalid && !eventForm.SectionActorsHome.$pristine" translate="eventErrors.teamHome"></span>
                     </div>
                     <div class="input-field col s2 m1">
                         &nbsp;
                     </div>
 
                     <div class="input-field col s10 m5" ng-show="chooseHome">
-                        <h6 class="red-text text-lighten-1">{{'eventLabels.SectionActorsAdversary' | translate }}</h6>                        
-                        <!--<select class="browser-default blue-grey-text text-darken-1" ng-model="adversaryId" id="adversary">
-                            <option value="" disabled selected>{{'eventLabels.Adversary' | translate }}</option>
-                            <option ng-repeat="p in listTeamAdversary" value="{{p._id}}">{{p.label}}</option>
-                        </select>-->
-                        <input type="text" list="adversaries" ng-model="adversaryLabel" placeholder="{{'eventLabels.Adversary' | translate }}"/>
+                        <h6 class="red-text text-lighten-1">{{'eventLabels.SectionActorsAdversary' | translate }} <span class="red-text text-lighten-1">*</span></label></h6>                        
+                        <input type="text" list="adversaries" name="SectionActorsAdversary" ng-model="adversaryLabel" placeholder="{{'eventLabels.Adversary' | translate }}" ng-required="chooseHome"
+                               ng-class="{ 'has-error' : eventForm.SectionActorsAdversary.$invalid && !eventForm.SectionActorsAdversary.$pristine }"/>
+                        <span class="small red-text text-lighten-1 col s12"
+                            ng-show="eventForm.SectionActorsAdversary.$invalid && !eventForm.SectionActorsAdversary.$pristine" translate="eventErrors.adversary"></span>
                         <datalist id="adversaries">
                             <option ng-repeat="p in listTeamAdversary" value="{{p.label}}"></option>
                         </datalist>
-                        
                     </div>
                 </div>
             </div>
@@ -116,8 +136,7 @@
                 <div class="row">
                     <div class="col s12 center-align">
                         <a href="" class="btn red lighteen-1 white-text waves-effect waves-light center" ng-click="doTheBack()" translate="commons.buttons.cancel"></a>
-                        <button class="btn green darken-1 waves-effect waves-light center" type="submit" name="action" translate="commons.buttons.validate">
-                            <i class="mdi-content-send right"></i>
+                        <button class="btn green darken-1 waves-effect waves-light center" type="submit" ng-disabled="eventForm.$invalid" translate="commons.buttons.validate">
                         </button>
                     </div>
                 </div>
